tests/snapshots/ir_tests__calc.snap
---
source: tests/ir_tests.rs
assertion_line: 27
expression: "format!(\"{:#?}\", cfg)"
---
ControlFlowGraph {
    blocks: [
        HirBlock {
            id: 0,
            instructions: [
                CallPrologue,
                StackAllocate {
                    slot: StackSlot(
                        0,
                    ),
                },
                StackStore {
                    slot: StackSlot(
                        0,
                    ),
                    value: Constant(
                        "1",
                    ),
                },
                StackAllocate {
                    slot: StackSlot(
                        1,
                    ),
                },
                StackStore {
                    slot: StackSlot(
                        1,
                    ),
                    value: Constant(
                        "2",
                    ),
                },
                StackAllocate {
                    slot: StackSlot(
                        2,
                    ),
                },
                StackStore {
                    slot: StackSlot(
                        2,
                    ),
                    value: Constant(
                        "3",
                    ),
                },
                StackAllocate {
                    slot: StackSlot(
                        3,
                    ),
                },
                StackLoad {
                    destination: Value(
                        HirRegister(
                            0,
                        ),
                    ),
                    slot: StackSlot(
                        0,
                    ),
                },
                StackLoad {
                    destination: Value(
                        HirRegister(
                            1,
                        ),
                    ),
                    slot: StackSlot(
                        1,
                    ),
                },
                BinaryOperator {
                    destination: Value(
                        HirRegister(
                            2,
                        ),
                    ),
                    left: Value(
                        HirRegister(
                            0,
                        ),
                    ),
                    operator: Sub,
                    right: Value(
                        HirRegister(
                            1,
                        ),
                    ),
                },
                StackLoad {
                    destination: Value(
                        HirRegister(
                            3,
                        ),
                    ),
                    slot: StackSlot(
                        2,
                    ),
                },
                BinaryOperator {
                    destination: Value(
                        HirRegister(
                            4,
                        ),
                    ),
                    left: Value(
                        HirRegister(
                            2,
                        ),
                    ),
                    operator: Multiply,
                    right: Value(
                        HirRegister(
                            3,
                        ),
                    ),
                },
                StackStore {
                    slot: StackSlot(
                        3,
                    ),
                    value: Value(
                        HirRegister(
                            4,
                        ),
                    ),
                },
                StackLoad {
                    destination: Value(
                        HirRegister(
                            5,
                        ),
                    ),
                    slot: StackSlot(
                        3,
                    ),
                },
            ],
            terminator: Some(
                Return(
                    Some(
                        Value(
                            HirRegister(
                                5,
                            ),
                        ),
                    ),
                ),
            ),
        },
    ],
    entry_block: 0,
}
