tests/snapshots/ir_tests__classes.snap
---
source: tests/ir_tests.rs
expression: "format!(\"{:#?}\", cfg)"
---
ControlFlowGraph {
    register_counter: 11,
    blocks: [
        HirBasicBlock {
            id: 0,
            instructions: [
                CallPrologue,
                LoadParameter {
                    destination: HirRegister(
                        1,
                    ),
                    index: 0,
                },
                GetField {
                    destination: HirRegister(
                        2,
                    ),
                    object: Value(
                        HirRegister(
                            1,
                        ),
                    ),
                    offset: 0,
                },
                BinaryOperator {
                    destination: HirRegister(
                        3,
                    ),
                    left: Value(
                        HirRegister(
                            2,
                        ),
                    ),
                    operator: Add,
                    right: Constant(
                        "1",
                    ),
                },
                PutField {
                    object: Value(
                        HirRegister(
                            1,
                        ),
                    ),
                    offset: 0,
                    value: Value(
                        HirRegister(
                            3,
                        ),
                    ),
                },
            ],
            terminator: Some(
                Return(
                    Some(
                        Value(
                            HirRegister(
                                2,
                            ),
                        ),
                    ),
                ),
            ),
            predecessors: [],
            successors: [],
        },
        HirBasicBlock {
            id: 1,
            instructions: [
                CallPrologue,
                LoadParameter {
                    destination: HirRegister(
                        4,
                    ),
                    index: 0,
                },
                StackAllocate {
                    slot: StackSlot(
                        1,
                    ),
                },
                AllocateObject {
                    destination: HirRegister(
                        5,
                    ),
                    class_name: "Node",
                },
                LoadConst {
                    destination: HirRegister(
                        6,
                    ),
                    value: "5",
                },
                PutField {
                    object: Value(
                        HirRegister(
                            5,
                        ),
                    ),
                    offset: 0,
                    value: Value(
                        HirRegister(
                            6,
                        ),
                    ),
                },
                StackStore {
                    slot: StackSlot(
                        1,
                    ),
                    value: Value(
                        HirRegister(
                            5,
                        ),
                    ),
                },
                StackLoad {
                    destination: HirRegister(
                        7,
                    ),
                    slot: StackSlot(
                        1,
                    ),
                },
                Call {
                    destination: HirRegister(
                        8,
                    ),
                    block: 0,
                    arguments: [
                        Value(
                            HirRegister(
                                7,
                            ),
                        ),
                    ],
                },
                StackLoad {
                    destination: HirRegister(
                        9,
                    ),
                    slot: StackSlot(
                        1,
                    ),
                },
                Call {
                    destination: HirRegister(
                        10,
                    ),
                    block: 0,
                    arguments: [
                        Value(
                            HirRegister(
                                9,
                            ),
                        ),
                    ],
                },
            ],
            terminator: Some(
                Return(
                    None,
                ),
            ),
            predecessors: [],
            successors: [],
        },
    ],
    entry_block: 1,
}
