tests/snapshots/ir_tests__for.snap
---
source: tests/ir_tests.rs
expression: "format!(\"{:#?}\", cfg)"
---
ControlFlowGraph {
    register_counter: 7,
    blocks: [
        HirBlock {
            id: 0,
            instructions: [
                CallPrologue,
                StackAllocate {
                    slot: StackSlot(
                        0,
                    ),
                },
                StackStore {
                    slot: StackSlot(
                        0,
                    ),
                    value: Constant(
                        "0",
                    ),
                },
                StackAllocate {
                    slot: StackSlot(
                        1,
                    ),
                },
                StackStore {
                    slot: StackSlot(
                        1,
                    ),
                    value: Constant(
                        "0",
                    ),
                },
            ],
            terminator: Some(
                Jump(
                    1,
                ),
            ),
        },
        HirBlock {
            id: 1,
            instructions: [
                StackLoad {
                    destination: HirRegister(
                        0,
                    ),
                    slot: StackSlot(
                        1,
                    ),
                },
                BinaryOperator {
                    destination: HirRegister(
                        1,
                    ),
                    left: Value(
                        HirRegister(
                            0,
                        ),
                    ),
                    operator: Less,
                    right: Constant(
                        "10",
                    ),
                },
            ],
            terminator: Some(
                Branch {
                    condition: Value(
                        HirRegister(
                            1,
                        ),
                    ),
                    true_block: 2,
                    false_block: 3,
                },
            ),
        },
        HirBlock {
            id: 2,
            instructions: [
                StackLoad {
                    destination: HirRegister(
                        2,
                    ),
                    slot: StackSlot(
                        0,
                    ),
                },
                BinaryOperator {
                    destination: HirRegister(
                        3,
                    ),
                    left: Value(
                        HirRegister(
                            2,
                        ),
                    ),
                    operator: Add,
                    right: Constant(
                        "2",
                    ),
                },
                StackStore {
                    slot: StackSlot(
                        0,
                    ),
                    value: Value(
                        HirRegister(
                            3,
                        ),
                    ),
                },
                StackLoad {
                    destination: HirRegister(
                        4,
                    ),
                    slot: StackSlot(
                        1,
                    ),
                },
                BinaryOperator {
                    destination: HirRegister(
                        5,
                    ),
                    left: Value(
                        HirRegister(
                            4,
                        ),
                    ),
                    operator: Add,
                    right: Constant(
                        "1",
                    ),
                },
                StackStore {
                    slot: StackSlot(
                        1,
                    ),
                    value: Value(
                        HirRegister(
                            5,
                        ),
                    ),
                },
            ],
            terminator: Some(
                Jump(
                    1,
                ),
            ),
        },
        HirBlock {
            id: 3,
            instructions: [
                StackLoad {
                    destination: HirRegister(
                        6,
                    ),
                    slot: StackSlot(
                        0,
                    ),
                },
            ],
            terminator: Some(
                Return(
                    Some(
                        Value(
                            HirRegister(
                                6,
                            ),
                        ),
                    ),
                ),
            ),
        },
    ],
    entry_block: 0,
}
