tests/snapshots/ir_tests__return.snap
---
source: tests/ir_tests.rs
expression: "format!(\"{:#?}\", cfg)"
---
ControlFlowGraph {
    register_counter: 0,
    blocks: [
        HirBlock {
            id: 0,
            instructions: [
                CallPrologue,
            ],
            terminator: Some(
                Branch {
                    condition: Constant(
                        "false",
                    ),
                    true_block: 1,
                    false_block: 2,
                },
            ),
            predecessors: [],
            successors: [
                1,
                2,
            ],
        },
        HirBlock {
            id: 1,
            instructions: [],
            terminator: Some(
                Return(
                    None,
                ),
            ),
            predecessors: [
                0,
            ],
            successors: [],
        },
        HirBlock {
            id: 2,
            instructions: [],
            terminator: Some(
                Branch {
                    condition: Constant(
                        "false",
                    ),
                    true_block: 3,
                    false_block: 4,
                },
            ),
            predecessors: [
                0,
            ],
            successors: [
                3,
                4,
            ],
        },
        HirBlock {
            id: 3,
            instructions: [],
            terminator: Some(
                Return(
                    None,
                ),
            ),
            predecessors: [
                2,
            ],
            successors: [],
        },
        HirBlock {
            id: 4,
            instructions: [],
            terminator: Some(
                Return(
                    None,
                ),
            ),
            predecessors: [
                2,
            ],
            successors: [],
        },
    ],
    entry_block: 0,
}
