tests/snapshots/ir_tests__while.snap
---
source: tests/ir_tests.rs
expression: "format!(\"{:#?}\", cfg)"
---
ControlFlowGraph {
    register_counter: 12,
    blocks: [
        HirBlock {
            id: 0,
            instructions: [
                CallPrologue,
                StackAllocate {
                    slot: StackSlot(
                        0,
                    ),
                },
                LoadParameter {
                    destination: HirRegister(
                        0,
                    ),
                    index: 0,
                },
                StackStore {
                    slot: StackSlot(
                        0,
                    ),
                    value: Value(
                        HirRegister(
                            0,
                        ),
                    ),
                },
                StackLoad {
                    destination: HirRegister(
                        1,
                    ),
                    slot: StackSlot(
                        0,
                    ),
                },
                BinaryOperator {
                    destination: HirRegister(
                        2,
                    ),
                    left: Value(
                        HirRegister(
                            1,
                        ),
                    ),
                    operator: Add,
                    right: Constant(
                        "5",
                    ),
                },
            ],
            terminator: Some(
                Return(
                    Some(
                        Value(
                            HirRegister(
                                2,
                            ),
                        ),
                    ),
                ),
            ),
        },
        HirBlock {
            id: 1,
            instructions: [
                CallPrologue,
                StackAllocate {
                    slot: StackSlot(
                        1,
                    ),
                },
                StackStore {
                    slot: StackSlot(
                        1,
                    ),
                    value: Constant(
                        "0",
                    ),
                },
            ],
            terminator: Some(
                Jump(
                    2,
                ),
            ),
        },
        HirBlock {
            id: 2,
            instructions: [],
            terminator: Some(
                Branch {
                    condition: Constant(
                        "true",
                    ),
                    true_block: 3,
                    false_block: 4,
                },
            ),
        },
        HirBlock {
            id: 3,
            instructions: [
                StackLoad {
                    destination: HirRegister(
                        3,
                    ),
                    slot: StackSlot(
                        1,
                    ),
                },
                BinaryOperator {
                    destination: HirRegister(
                        4,
                    ),
                    left: Value(
                        HirRegister(
                            3,
                        ),
                    ),
                    operator: Equal,
                    right: Constant(
                        "9",
                    ),
                },
            ],
            terminator: Some(
                Branch {
                    condition: Value(
                        HirRegister(
                            4,
                        ),
                    ),
                    true_block: 5,
                    false_block: 6,
                },
            ),
        },
        HirBlock {
            id: 4,
            instructions: [
                StackLoad {
                    destination: HirRegister(
                        11,
                    ),
                    slot: StackSlot(
                        1,
                    ),
                },
            ],
            terminator: Some(
                Return(
                    Some(
                        Value(
                            HirRegister(
                                11,
                            ),
                        ),
                    ),
                ),
            ),
        },
        HirBlock {
            id: 5,
            instructions: [
                StackLoad {
                    destination: HirRegister(
                        5,
                    ),
                    slot: StackSlot(
                        1,
                    ),
                },
                BinaryOperator {
                    destination: HirRegister(
                        6,
                    ),
                    left: Value(
                        HirRegister(
                            5,
                        ),
                    ),
                    operator: Add,
                    right: Constant(
                        "1",
                    ),
                },
                StackStore {
                    slot: StackSlot(
                        1,
                    ),
                    value: Value(
                        HirRegister(
                            6,
                        ),
                    ),
                },
            ],
            terminator: Some(
                Jump(
                    6,
                ),
            ),
        },
        HirBlock {
            id: 6,
            instructions: [
                StackLoad {
                    destination: HirRegister(
                        7,
                    ),
                    slot: StackSlot(
                        1,
                    ),
                },
                BinaryOperator {
                    destination: HirRegister(
                        8,
                    ),
                    left: Value(
                        HirRegister(
                            7,
                        ),
                    ),
                    operator: Equal,
                    right: Constant(
                        "10",
                    ),
                },
            ],
            terminator: Some(
                Branch {
                    condition: Value(
                        HirRegister(
                            8,
                        ),
                    ),
                    true_block: 7,
                    false_block: 8,
                },
            ),
        },
        HirBlock {
            id: 7,
            instructions: [],
            terminator: Some(
                Jump(
                    4,
                ),
            ),
        },
        HirBlock {
            id: 8,
            instructions: [],
            terminator: Some(
                Jump(
                    9,
                ),
            ),
        },
        HirBlock {
            id: 9,
            instructions: [],
            terminator: Some(
                Jump(
                    10,
                ),
            ),
        },
        HirBlock {
            id: 10,
            instructions: [
                StackLoad {
                    destination: HirRegister(
                        9,
                    ),
                    slot: StackSlot(
                        1,
                    ),
                },
                Call {
                    destination: HirRegister(
                        10,
                    ),
                    block: 0,
                    arguments: [
                        Value(
                            HirRegister(
                                9,
                            ),
                        ),
                    ],
                },
                StackStore {
                    slot: StackSlot(
                        1,
                    ),
                    value: Value(
                        HirRegister(
                            10,
                        ),
                    ),
                },
            ],
            terminator: Some(
                Jump(
                    2,
                ),
            ),
        },
    ],
    entry_block: 1,
}
